[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/MediumText.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/XPDisplay.gd" type="Script" id=2]
[ext_resource path="res://UI/Transparent_RoundedButtonStyleBox.tres" type="StyleBox" id=3]

[node name="XPDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.111
margin_bottom = 0.119987
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 70.0
size_flags_vertical = 3
alignment = 1

[node name="Label_XPToLevel" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 880.0
margin_top = 16.0
margin_right = 1000.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "XP to #: "

[node name="Label_CurrentXP" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 1004.0
margin_top = 16.0
margin_right = 1040.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "69"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 50.0
margin_right = 1920.0
margin_bottom = 120.0
size_flags_vertical = 3
alignment = 1

[node name="Label_TotalXP" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 828.0
margin_top = 16.0
margin_right = 998.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "Current XP: "

[node name="Label_CurrentTotalXP" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
margin_left = 1002.0
margin_top = 16.0
margin_right = 1092.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 1 )
text = "42069"
align = 2
